src/objects/Task_Timer_Activity__c.object
<CustomObject>
    <description>XLR8 custom object that records the date and time spent on a given Task.</description>
    <fields>
        <fullName>Billable__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Indicates that the time spent on this activity is billable.</inlineHelpText>
        <label>Billable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Duration__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>This is the duration of the timed activity.  By default it will start at 0.00 but he user has the option of setting a start time for the timer.  For Example, if they already spent 2 hours and want to start timer at 2 hours, then they would enter 2.0.</inlineHelpText>
        <label>Duration</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Task_ID__c</fullName>
        <label>Task ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Task_Subject__c</fullName>
        <label>Task Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Task__c</fullName>
        <formula>HYPERLINK(&quot;/&quot; +  Task_ID__c ,  Task_Subject__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Task</label>
        <type>Text</type>
    </fields>
    <label>Task Timer Activity</label>
    <nameField>
        <displayFormat>Timer Activity {0}</displayFormat>
        <label>Task Timer Activity Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Task Timer Activities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Task_Id_cannot_be_changed</fullName>
        <active>true</active>
        <errorConditionFormula>AND( NOT(ISBLANK( Task_ID__c )), ISCHANGED(Task_ID__c ))</errorConditionFormula>
        <errorMessage>Task ID cannot be changed</errorMessage>
    </validationRules>
</CustomObject>